@@ -1,3 +1,6 @@
+*.a
+*.o
 Makefile
 config.h
+config.h.in~
 stamp-h1
